--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="container">
+  <div class="section-1 container mt-4">
+    <div class="row justify-content-evenly align-items-center">
+      <div class="col-md-5" style="padding: 0 50px;">
+        <h1 class="mb-4 display-6 fw-bold text-muted">We bring solutions to make life easier for our customers.</h1>
+        <h4 class="text-muted my-4">
+          we have considered our solutions to support every stage of your growth
+        </h4>
+        <div class="row d-inline px-2">
+          <button class="col-4 me-2 btn btn-exp">Explore Now</button>
+          <button class="col-4 ms-2 btn btn-free"> Free Trail</button>
+        </div>
+      </div>
+      <div class="col-md-7" style="padding: 0 50px;">
+        <div class="img-contain sec-1-img">
+        </div>
+        <img class="img-fluid first-sec-img" src="./images/img1.jpg">
+
+      </div>
+    </div>
   </div>
   
 </body>
