--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="section-1 container mt-4">
-    <div class="row justify-content-evenly align-items-center">
+  <div class="container m-auto mt-4">
+    <div class="row justify-content-evenly align-items-center flex-column-reverse flex-md-row">
       <div class="col-md-5" style="padding: 0 50px;">
         <h1 class="mb-4 display-6 fw-bold text-muted">We bring solutions to make life easier for our customers.</h1>
         <h4 class="text-muted my-4">
@@ -29,6 +29,30 @@
         </div>
         <img class="img-fluid first-sec-img" src="./images/img1.jpg">
 
+      </div>
+    </div>
+    <div class="brands row justify-content-center align-items-center">
+      <div class="col-md-6 row">
+        <div class="col-4">
+          <img class="brands-img" src="./images/c1.png">
+        </div>
+        <div class="col-4">
+          <img class="brands-img" src="./images/c2.png">
+        </div>
+        <div class="col-4">
+          <img class="brands-img" src="./images/c3.png">
+        </div>
+      </div>
+      <div class="col-md-6 row">
+        <div class="col-4">
+          <img class="brands-img" src="./images/c4.png">
+        </div>
+        <div class="col-4">
+          <img class="brands-img" src="./images/c5.png">
+        </div>
+        <div class="col-4">
+          <img class="brands-img" src="./images/c6.png">
+        </div>
       </div>
     </div>
   </div>
