section 2 and 3 done

--- a/index.html
+++ b/index.html
@@ -55,6 +55,84 @@
         </div>
       </div>
     </div>
+    <div class="what-we-do row">
+      <div class="row text-muted text-center">
+          <p class="text-center">WHAT WE DO?</p>
+      </div>
+      <div class="row w-50 m-auto">
+        <p class="display-6 text-center parag" style="color:#555;">
+          The service we offer is specially designed to meet your needs
+        </p>
+      </div>
+      <div class="learn-more-card row text-center">
+        <div class="col-3 individual-card">
+          <div class="icon">
+            <i class="fas fa-phone-alt"></i>
+
+          </div>
+          <div class="title-sec">
+            24/support
+          </div>
+          <div class="more-info">
+            Etiam porta sem malesuada magna mollis euismod Donec ullamcorper nulla non metus autor fringilla
+          </div>
+          <div class="learn-more">
+            <a href="#">
+              Learn More &nbsp; <i class="fas fa-caret-right"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-3 individual-card">
+          <div class="icon">
+            <i class="fas fa-shield-alt"></i>
+          </div>
+          <div class="title-sec">
+            Secure Payment
+          </div>
+          <div class="more-info">
+            Etiam porta sem malesuada magna mollis euismod Donec ullamcorper nulla non metus autor fringilla
+          </div>
+          <div class="learn-more d-inline">
+            <a href="#">
+              Learn More &nbsp; <i class="fas fa-caret-right"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-3 individual-card">
+          <div class="icon">
+            <i class="fas fa-bell"></i>
+          </div>
+          <div class="title-sec">
+            Daily Updates
+          </div>
+          <div class="more-info">
+            Etiam porta sem malesuada magna mollis euismod Donec ullamcorper nulla non metus autor fringilla
+          </div>
+          <div class="learn-more">
+            <a href="#">
+              Learn More &nbsp; <i class="fas fa-caret-right"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-3 individual-card">
+          <div class="icon">
+            <i class="fas fa-chart-line"></i>
+          </div>
+          <div class="title-sec">
+            Market Research
+          </div>
+          <div class="more-info">
+            Etiam porta sem malesuada magna mollis euismod Donec ullamcorper nulla non metus autor fringilla
+          </div>
+          <div class="learn-more">
+            <a href="#">
+              Learn More &nbsp; <i class="fas fa-caret-right"></i>
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
   
 </body>
