fourth section complete

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </p>
       </div>
       <div class="learn-more-card row text-center">
-        <div class="col-3 individual-card">
+        <div class="col-md-3 individual-card">
           <div class="icon">
             <i class="fas fa-phone-alt"></i>
 
@@ -82,7 +82,7 @@
             </a>
           </div>
         </div>
-        <div class="col-3 individual-card">
+        <div class="col-md-3 individual-card">
           <div class="icon">
             <i class="fas fa-shield-alt"></i>
           </div>
@@ -92,13 +92,13 @@
           <div class="more-info">
             Etiam porta sem malesuada magna mollis euismod Donec ullamcorper nulla non metus autor fringilla
           </div>
-          <div class="learn-more d-inline">
+          <div class="learn-more">
             <a href="#">
               Learn More &nbsp; <i class="fas fa-caret-right"></i>
             </a>
           </div>
         </div>
-        <div class="col-3 individual-card">
+        <div class="col-md-3 individual-card">
           <div class="icon">
             <i class="fas fa-bell"></i>
           </div>
@@ -114,7 +114,7 @@
             </a>
           </div>
         </div>
-        <div class="col-3 individual-card">
+        <div class="col-md-3 individual-card">
           <div class="icon">
             <i class="fas fa-chart-line"></i>
           </div>
@@ -132,6 +132,70 @@
         </div>
 
       </div>
+    </div>
+    <div class="how-it-works row justify-content-evenly align-items-center">
+      <div class="col-md-6" style="padding:80px;">
+        <div class="section-4-illus">
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+          <div class="bar-15"></div>
+        </div>
+        <img class="img-fluid first-sec-img second-sec-img" src="./images/img2.jpg">
+    </div>
+      <div class="col-md-6" style="padding:50px;">
+        <h1 class="mb-4 display-6 fw-bold text-muted">How it works?</h1>
+        <h4 class="text-muted my-4">
+          So here there are three working steps why our valued customers choose us
+        </h4>
+        <div class="row">
+            <div class="step-outer">
+              <div class="nums">
+                1
+              </div>
+              <div class="steps step-1">
+                <p class="fw-bold">Collect Ideas</p>
+                <p class="text-muted">
+                  Nulla Vitae elit libero pharetra dapibus present commondo cursus
+                </p>
+              </div>
+            </div>
+            <div class="step-outer">
+              <div class="nums">
+                2
+              </div>
+              <div class="steps step-1">
+                <p class="fw-bold">Data Analysis</p>
+                <p class="text-muted">
+                  Nulla Vitae elit libero pharetra dapibus present commondo cursus
+                </p>
+              </div>
+            </div>
+            <div class="step-outer">
+              <div class="nums">
+                3
+              </div>
+              <div class="steps step-1">
+                <p class="fw-bold">Finalize Products</p>
+                <p class="text-muted">
+                  Nulla Vitae elit libero pharetra dapibus present commondo cursus
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
   
