projects carousel done

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row text-muted text-center">
           <p class="text-center">WHAT WE DO?</p>
       </div>
-      <div class="row w-50 m-auto">
+      <div class="row width-50 m-auto">
         <p class="display-6 text-center parag" style="color:#555;">
           The service we offer is specially designed to meet your needs
         </p>
@@ -134,7 +134,7 @@
       </div>
     </div>
     <div class="how-it-works row justify-content-evenly align-items-center">
-      <div class="col-md-6" style="padding:80px;">
+      <div class="col-md-6 how-it-first-col" >
         <div class="section-4-illus">
           <div class="bar-15"></div>
           <div class="bar-15"></div>
@@ -196,6 +196,43 @@
             </div>
           </div>
         </div>
+    </div>
+
+    <div class="latest-projects">
+      <div class="row text-muted text-center">
+        <p class="text-center fw-bold">LATEST PROJECTS</p>
+      </div>
+      <div class="row width-50 m-auto">
+        <p class="display-6 text-center parag" style="color:#555;">
+          Check out some of our awesome projects with creative ideas and great design.
+        </p>
+      </div>
+      <div class="project-carousel">
+        <div class="" id="imgs">
+          <img src="./images/img3.jpg" alt="">
+          <img src="./images/img4.jpg" alt="">
+          <img src="./images/img5.jpg" alt="">
+          <img src="./images/img6.jpg" alt="">
+          <img src="./images/img7.jpg" alt="">
+          <img src="./images/img8.jpg" alt="">
+          <img src="./images/img9.jpg" alt="">
+        </div>
+        <div class="btn-left">
+          <i class="fas fa-arrow-left"></i>
+        </div>
+        <div class="btn-right">
+          <i class="fas fa-arrow-right"></i>
+        </div>
+        <div class="dots-img">
+          <div class="dot active"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+      </div>
     </div>
   </div>
   
