added demo folder

--- a/header.html
+++ b/header.html
@@ -193,10 +193,10 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           EN
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item" href="#">Action</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-menu" style="min-width:auto;" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="#">EN</a>
+                          <a class="dropdown-item" href="#">DE</a>
+                          <a class="dropdown-item" href="#">ES</a>
                         </div>
                       </li>
                       <button class="btn btn-primary contact-btn">Contact</button>
