added navbar demos

--- a/header.html
+++ b/header.html
@@ -30,11 +30,89 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <span class='demo'>Demos</span>
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
+
+                    <ul class="dropdown-menu multi-column-demo columns-5">
+                        <div class="row row1" >
+                            <div class="col-sm-2" >
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row row1" style="margin-top:5px;">
+                            <div class="col-sm-2" >
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row row1" style="margin-top:5px;margin-bottom:20px;">
+                            <div class="col-sm-2" >
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="multi-column-img-dropdown" style="background-image:url('./images/demo/mi1.jpg');">
+                                </div>
+                            </div>
+                        </div>
+                    </ul>
                   </li>
                   <li class="nav-item dropdown px-2">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -112,7 +190,7 @@
                       Documentation
                     </a>
                         <ul class="dropdown-menu multi-column columns-5">
-                            <div class="row documentation_row">
+                            <div class="row">
                                 <div class="col-sm-2">
                                     <ul class="multi-column-dropdown">
                                         <li><a href="#"><span class='header-mc'>USAGE</span></a></li>
