--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="what-we-do row">
       <div class="row text-muted text-center">
-          <p class="text-center">WHAT WE DO?</p>
+          <p class="text-center fw-bold">WHAT WE DO?</p>
       </div>
       <div class="row width-50 m-auto">
         <p class="display-6 text-center parag" style="color:#555;">
@@ -154,7 +154,7 @@
           <div class="bar-15"></div>
         </div>
         <img class="img-fluid first-sec-img second-sec-img" src="./images/img2.jpg">
-    </div>
+      </div>
       <div class="col-md-6" style="padding:50px;">
         <h1 class="mb-4 display-6 fw-bold text-muted">How it works?</h1>
         <h4 class="text-muted my-4">
@@ -195,7 +195,7 @@
               </div>
             </div>
           </div>
-        </div>
+      </div>
     </div>
 
     <div class="latest-projects">
@@ -209,13 +209,13 @@
       </div>
       <div class="project-carousel">
         <div class="" id="imgs">
-          <img src="./images/img3.jpg" alt="">
-          <img src="./images/img4.jpg" alt="">
-          <img src="./images/img5.jpg" alt="">
-          <img src="./images/img6.jpg" alt="">
-          <img src="./images/img7.jpg" alt="">
-          <img src="./images/img8.jpg" alt="">
-          <img src="./images/img9.jpg" alt="">
+          <img class="img-caro" src="./images/img3.jpg" alt="">
+          <img class="img-caro" src="./images/img4.jpg" alt="">
+          <img class="img-caro" src="./images/img5.jpg" alt="">
+          <img class="img-caro" src="./images/img6.jpg" alt="">
+          <img class="img-caro" src="./images/img7.jpg" alt="">
+          <img class="img-caro" src="./images/img8.jpg" alt="">
+          <img class="img-caro" src="./images/img9.jpg" alt="">
         </div>
         <div class="btn-left">
           <i class="fas fa-arrow-left"></i>
@@ -231,6 +231,49 @@
           <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row who-are-we" style="margin:70px auto ">
+      <div class="col-6 about-img">
+        <div class="img-contain" style="position: relative; text-align: center;">
+          <img src="./images/about12.jpg" style="width: 90%; border-radius: 12px;">
+          <div class="play-btn">
+            <i class="fas fa-play"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col-6" style="padding:10px 70px;">
+        <div class="row text-muted">
+          <p class="fw-bold" style="color: #ccc;">WHO ARE WE?</p>
+        </div>
+        <h2 class="fw-bold text-muted " style="margin-bottom: 20px;">
+          Company that believes in the power of creative strategy
+        </h2>
+        <div class="text-muted" style="line-height: 1.5; margin-bottom: 20px;">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil earum, corporis quaerat nisi animi, tenetur cupiditate harum eum deleniti ea quod. Nobis voluptatum animi numquam.
+        </div>
+        <div class="row mt-4">
+          <div class="col-6 text-muted">
+            <div class="outer-cont" >
+              <i class="fas fa-check me-4 mt-2 text-success"></i>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, obcaecati!</p>
+            </div>
+            <div class="outer-cont" >
+              <i class="fas fa-check me-4 mt-2 text-success"></i>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, magni?</p>
+            </div>
+          </div>
+          <div class="col-6 text-muted">
+            <div class="outer-cont" >
+              <i class="fas fa-check me-4 mt-2 text-success"></i>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, obcaecati!</p>
+            </div>
+            <div class="outer-cont" >
+              <i class="fas fa-check me-4 mt-2 text-success"></i>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, magni?</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
