every section complete only team carousel is remaining

--- a/index.html
+++ b/index.html
@@ -287,17 +287,17 @@
 </nav>
   <div class="container m-auto mt-4">
     <div class="row justify-content-evenly align-items-center flex-column-reverse flex-md-row">
-      <div class="col-md-5" style="padding: 0 50px;">
+      <div class="col-md-5 video-eff" >
         <h1 class="mb-4 display-6 fw-bold text-muted">We bring solutions to make life easier for our customers.</h1>
         <h4 class="text-muted my-4">
           we have considered our solutions to support every stage of your growth
         </h4>
-        <div class="row d-inline px-2">
-          <button class="col-4 me-2 btn btn-exp">Explore Now</button>
-          <button class="col-4 ms-2 btn btn-free"> Free Trail</button>
+        <div class="row px-2 button-sec justify-content-center">
+          <button class="col-4 me-2 btn btn-exp flex-grow-1">Explore Now</button>
+          <button class="col-4 ms-2 btn btn-free flex-grow-1"> Free Trail</button>
         </div>
       </div>
-      <div class="col-md-7" style="padding: 0 50px;">
+      <div class="col-md-7 video-eff" >
         <div class="img-contain sec-1-img">
         </div>
         <img class="img-fluid first-sec-img" src="./images/img1.jpg">
@@ -428,7 +428,7 @@
         </div>
         <img class="img-fluid first-sec-img second-sec-img" src="./images/img2.jpg">
       </div>
-      <div class="col-md-6" style="padding:50px;">
+      <div class="col-md-6 video-eff" >
         <h1 class="mb-4 display-6 fw-bold text-muted">How it works?</h1>
         <h4 class="text-muted my-4">
           So here there are three working steps why our valued customers choose us
@@ -508,15 +508,15 @@
       </div>
     </div>
     <div class="row who-are-we" style="margin:70px auto ">
-      <div class="col-6 about-img">
+      <div class="col-md-6 about-img">
         <div class="img-contain" style="position: relative; text-align: center;">
-          <img src="./images/about12.jpg" style="width: 90%; border-radius: 12px;">
+          <img src="./images/about12.jpg" style="width: 100%; border-radius: 12px;">
           <div class="play-btn">
             <i class="fas fa-play"></i>
           </div>
         </div>
       </div>
-      <div class="col-6" style="padding:10px 70px;">
+      <div class="col-md-6 video-eff">
         <div class="row text-muted">
           <p class="fw-bold" style="color: #ccc;">WHO ARE WE?</p>
         </div>
@@ -527,7 +527,7 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil earum, corporis quaerat nisi animi, tenetur cupiditate harum eum deleniti ea quod. Nobis voluptatum animi numquam.
         </div>
         <div class="row mt-4">
-          <div class="col-6 text-muted">
+          <div class="col-md-6 text-muted">
             <div class="outer-cont" >
               <i class="fas fa-check me-4 mt-2 text-success"></i>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, obcaecati!</p>
@@ -537,7 +537,7 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, magni?</p>
             </div>
           </div>
-          <div class="col-6 text-muted">
+          <div class="col-md-6 text-muted">
             <div class="outer-cont" >
               <i class="fas fa-check me-4 mt-2 text-success"></i>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, obcaecati!</p>
@@ -551,7 +551,7 @@
       </div>
     </div>
     <div class="row team-sec">
-      <div class="col-3">
+      <div class="col-md-3">
         <div class="row text-muted">
           <p class="fw-bold">MEET THE TEAM</p>
         </div>
@@ -567,7 +567,7 @@
           <button class="btn btn-exp" style="width: fit-content; font-weight: bold; padding: 14px 20px; margin: 15px auto;">See All Members</button>
         </div>
       </div>
-      <div class="col-11">
+      <div class="col-md-11">
         <div class="team-carousel">
           <div class="" id="cards">
             <div class="indi-card">
@@ -706,13 +706,13 @@
     </div>
 
 
-    <div class="row last-sec justify-content-center align-items-center">
-      <div class="col-4">
+    <div class="row last-sec justify-content-center align-items-center" style="margin:70px auto;">
+      <div class="col-md-4 chuppa">
         <div class="img-outer text-center">
           <img src="./images/img13.png">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-md-6 reviews-bg">
         <div class="stars d-flex text-warning justify-content-center" style="margin:20px auto">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -731,7 +731,72 @@
         </div>
       </div>  
     </div>
-
+    <footer class="row footer">
+      <div class="col-md-3">
+        <div class="my-4">
+          <img src="./images/logo.png" >
+        </div>
+        <div class="my-4 text-muted">
+          &copy; 2021 Sandbox<br>
+          All rights reserved
+        </div>
+        <div class="social my-4">
+          <div class="twitter">
+            <a href="#" style="color: rgb(8,160,233)"><i class="fab fa-twitter"></i></a>
+          </div>
+          <div class="facebook">
+            <a href="#" style="color:rgb(59,90,154);"><i class="fab fa-facebook-f"></i></a>
+          </div>
+          <div class="dribble">
+            <a href="#" style="color:rgb(235, 207,179)s"><i class="fas fa-basketball-ball"></i></a>
+          </div>
+          <div class="slack">
+            <a href="#" style="color: rgb(221, 42,123);"><i class="fab fa-instagram"></i></a>
+          </div>
+          <div class="youtube">
+            <a href="#" style="color: rgb(230,33,23)"> <i class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 my-2 text-muted">
+        <div class="fw-bold my-2">
+          Get in Touch
+        </div>
+        <div class="my-2">
+          Moonshine St. 14/05<br>
+          Light City, London,<br>
+          United Kingdom
+        </div>
+        <div class="my-2">
+          <p>info@gmail.com</p>
+          <p>+00 (123) 456  78 90</p>
+        </div>
+      </div>
+      <div class="col-md-3  mt-4">
+        <div class="fw-bold mb-2">
+          Learn More
+        </div>
+        <ul class="text-muted" style="list-style: none; padding: 0;">
+          <li class="mt-1" style="cursor: pointer;">About Us</li>
+          <li class="mt-1" style="cursor: pointer;">Our Story</li>
+          <li class="mt-1" style="cursor: pointer;">Projects</li>
+          <li class="mt-1" style="cursor: pointer;">Terms of Use</li>
+          <li class="mt-1" style="cursor: pointer;">Privacy Policy</li>
+        </ul>
+      </div>
+      <div class="col-md-3 mt-4">
+        <div class="fw-bold mb-2">
+          Our Newsletter
+        </div>
+        <div class="text-muted">
+          Subscribe to our newsletter to get our news & deals delivered to you
+        </div>
+        <div class="input-group my-3">
+          <input type="text" class="form-control" placeholder="Email Address" aria-label="Email Address" aria-describedby="button-addon2">
+          <button class="btn btn-primary" style="border-radius:0 4px 4px;" type="button" id="button-addon2">Join</button>
+        </div>
+      </div>
+    </footer>
   </div>
   
 
