--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
         </div>
       </div>  
     </div>
-    <footer class="row footer">
+    <footer class="row footer my-md-4">
       <div class="col-md-3">
         <div class="my-4">
           <img src="./images/logo.png" >
