everything completed with responsiveness

--- a/index.html
+++ b/index.html
@@ -482,13 +482,48 @@
       </div>
       <div class="project-carousel">
         <div class="" id="imgs">
-          <img class="img-caro" src="./images/img3.jpg" alt="">
-          <img class="img-caro" src="./images/img4.jpg" alt="">
-          <img class="img-caro" src="./images/img5.jpg" alt="">
-          <img class="img-caro" src="./images/img6.jpg" alt="">
-          <img class="img-caro" src="./images/img7.jpg" alt="">
-          <img class="img-caro" src="./images/img8.jpg" alt="">
-          <img class="img-caro" src="./images/img9.jpg" alt="">
+          <div class="img-cont-car" >
+            <img class="img-caro" src="./images/img3.jpg" alt="">
+            <div class="link">
+              <i class="fas fa-link"></i>
+            </div>
+          </div>
+          <div class="img-cont-car">
+            <img class="img-caro" src="./images/img4.jpg" alt="">
+            <div class="link">
+              <i class="fas fa-link"></i>
+            </div>
+          </div>
+          <div class="img-cont-car">
+            <img class="img-caro" src="./images/img5.jpg" alt="">
+            <div class="link">
+              <i class="fas fa-link"></i>
+            </div>
+          </div>
+          <div class="img-cont-car">
+            <img class="img-caro" src="./images/img6.jpg" alt="">
+            <div class="link">
+              <i class="fas fa-link"></i>
+            </div>
+          </div>
+          <div class="img-cont-car">
+            <img class="img-caro" src="./images/img7.jpg" alt="">
+            <div class="link">
+              <i class="fas fa-link"></i>
+            </div>
+          </div>
+          <div class="img-cont-car">
+            <img class="img-caro" src="./images/img8.jpg" alt="">
+            <div class="link">
+              <i class="fas fa-link"></i>
+            </div>
+          </div>
+          <div class="img-cont-car">
+            <img class="img-caro" src="./images/img9.jpg" alt="">
+            <div class="link">
+              <i class="fas fa-link"></i>
+            </div>
+          </div>
         </div>
         <div class="btn-left">
           <i class="fas fa-arrow-left"></i>
@@ -793,7 +828,7 @@
         </div>
         <div class="input-group my-3">
           <input type="text" class="form-control" placeholder="Email Address" aria-label="Email Address" aria-describedby="button-addon2">
-          <button class="btn btn-primary" style="border-radius:0 4px 4px;" type="button" id="button-addon2">Join</button>
+          <button class="btn-primary" style="border-radius:0 4px 4px; padding: 8px 16px; border: 0;" type="button" id="button-addon2">Join</button>
         </div>
       </div>
     </footer>
