move to top functionality added, bug fixes

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         </ul>
     </nav>
     </div>
-    <nav class = 'navbar navbar-light py-3 bg-primary topmost'>
+    <nav id="top" class = 'navbar navbar-light py-3 bg-primary topmost'>
         <span><i class='fa fa-map-marker' style="margin-top:4px;"></i>&nbsp; Moonshine St. 14/05 Light City</span>
         <span >
                 <li ><i class="fa fa-volume-control-phone" style="transform:rotate(-40deg)"></i>&nbsp;00 (123) 456 78 90 </li>
@@ -703,6 +703,11 @@
             <span></span>
         </button>
     </nav>
+  <div class="move-top">
+    <a href="#top" style="width: 100%; height: 100%; display: flex;justify-content: center; align-items: center; text-decoration: none;">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+  </div>
   <div class="container m-auto mt-4">
     <div class="row justify-content-evenly align-items-center flex-column-reverse flex-md-row">
       <div class="col-md-5 video-eff" >
@@ -711,8 +716,8 @@
           we have considered our solutions to support every stage of your growth
         </h4>
         <div class="row px-2 button-sec justify-content-center">
-          <button class="col-4 me-2 btn btn-exp flex-grow-1">Explore Now</button>
-          <button class="col-4 ms-2 btn btn-free flex-grow-1"> Free Trail</button>
+          <button class="col-4 me-2 btns btn-exp flex-grow-1">Explore Now</button>
+          <button class="col-4 ms-2 btns btn-free flex-grow-1"> Free Trail</button>
         </div>
       </div>
       <div class="col-md-7 video-eff" >
@@ -1019,8 +1024,7 @@
           <button class="btn btn-exp" style="width: fit-content; font-weight: bold; padding: 14px 20px; margin: 15px auto;">See All Members</button>
         </div>
       </div>
-      <div class="col-md-11">
-        <div class="team-carousel">
+      <div class="col-md-9">
           <div class="" id="cards">
             <div class="indi-card">
               <div class="img-contain">
@@ -1147,12 +1151,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="dots-img">
-            <div class="dot active"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-          </div>
         </div>
       </div>
     </div>
